--- a/src/partials/03-feedback.html
+++ b/src/partials/03-feedback.html
@@ -7,6 +7,7 @@
     <title>Feedback form</title>
     <!-- <link rel="stylesheet" href="css/common.css" /> -->
     <link rel="stylesheet" href="../sass/_03-feedback.scss" />
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <p><a href="../index.html">Go back</a></p>
