--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 8</title>
+    <link rel="shortcut icon" href="#" />
+
     <!-- <link rel="stylesheet" href="../sass/_common.scss" /> -->
   </head>
   <body>
