--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,3 @@
-@import '~node_modules/modern-normalize/modern-normalize.css';
-
 * {
   box-sizing: border-box;
 }
@@ -17,4 +15,34 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+button {
+  padding: 20px;
+  margin: 10px;
+}
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.timer {
+  display: flex;
+  align-items: center;
+  padding: 0;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  /* font-size: 20px; */
+}
+span.value {
+  font-size: xxx-large;
+}
+
+span.label {
+  font-size: x-large;
+  text-transform: uppercase;
 }
